# calculus

./: CMakeLists.txt  Function.hpp  FunctionProvider.hpp  LICENSE  Operand.cpp  Operand.hpp  Operator.hpp  OperatorProvider.hpp  main.cpp  types.hpp
BasicFunctions/: BasicFunctionProvider.cpp  BasicFunctionProvider.hpp  BasicFunctions.cpp  BasicFunctions.hpp
BasicOperators/: AdditionOperator.cpp  AdditionOperator.hpp  BasicOperatorProvider.cpp  BasicOperatorProvider.hpp  DivisionOperator.cpp  DivisionOperator.hpp  MultiplicationOperator.cpp  MultiplicationOperator.hpp  PowOperator.cpp  PowOperator.hpp  SubtractionOperator.cpp  SubtractionOperator.hpp
Calculator/: Calculator.cpp  Calculator.hpp
ONPParser/: ONPParser.cpp  ONPParser.hpp
Solver/: Solver.cpp  Solver.hpp
Trigonometry/: TrigonometryFunctions.cpp  TrigonometryFunctions.hpp  TrigonometryFunctionsProvider.cpp  TrigonometryFunctionsProvider.hpp
